--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -1,6 +1,6 @@
-﻿@if (!loading)
-{
-    <MudPaper Elevation="25" id="postrace-container">
+﻿<MudPaper Elevation="25" id="postrace-container">
+    @if (!loading)
+    {
         <MudGrid Spacing="1">
             <MudItem xs=12>
                 <MudPaper Elevation="15" Height="75px" Class="pa-4">
@@ -136,8 +136,8 @@
                 </MudStack>
             </MudItem>
         </MudGrid>
-    </MudPaper>
-}
+    }
+</MudPaper>
 
 @code {
     [CascadingParameter] public RaweCeekModel RaweCeek { get; set; }
