--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -124,10 +124,10 @@
     [Parameter] public EventCallback<long> OnDelete { get; set; }
     [Parameter] public EventCallback<int> OnGoToRace { get; set; }
 
-    private List<CalendarListing> SeasonCalendar = new();
+    List<CalendarListing> SeasonCalendar = new();
 
-    private bool loading = true;
-    private int nextRound;
+    bool loading = true;
+    int nextRound;
 
     protected override void OnParametersSet()
     {
