--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDriverEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Modify in-season driver</MudText>
+        <MudText Typo="Typo.h5">Modify in-season driver</MudText>
     </TitleContent>
     <DialogContent>
         <MudContainer>
