--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -11,6 +11,12 @@
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Drivers</MudText>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="Driver" Items="@drivers" RowsPerPage="15" Dense="true" QuickFilter="@_driverFilter">
+        <ToolBarContent>
+            <MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
+                          AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0 field-md" />
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                 <MudButton OnClick="ToggleDisplayArchived">
@@ -19,11 +25,8 @@
                 <MudButton OnClick="GoToHumanGenerator">Generate</MudButton>
                 <MudButton OnClick="AddDriver">New</MudButton>
             </MudButtonGroup>
-        </MudStack>
-    </MudPaper>
-    <MudDataGrid T="Driver" Items="@drivers" RowsPerPage="15" Dense="true">
+        </ToolBarContent>
         <Columns>
-            <HierarchyColumn T="Driver" />
             <PropertyColumn Property="e => e!.FullName" Title="Name" />
             <PropertyColumn Property="e => e!.Abbreviation" Title="Tag" />
             <PropertyColumn Property="e => e!.DateOfBirth" Title="Born in" Format="yyyy" />
@@ -40,22 +43,13 @@
             <TemplateColumn T="Driver" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup Size="@Size.Small" Class="ml-auto">
+                        <MudIconButton Icon="@Icons.Material.Outlined.QueryStats" OnClick="@(async () => await ShowDetailData(context.Item))" />
                         <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriver(context.Item))" />
                         <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await ArchiveDriver(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
         </Columns>
-        <ChildRowContent>
-            <MudText Typo="Typo.h6">@context.Item.FullName</MudText>
-            <MudStack Row="true">
-                <MudPaper>
-                    <MudStack AlignItems="AlignItems.Center">
-                        <MudText>State is currently @(context.Item.State)</MudText>
-                    </MudStack>
-                </MudPaper>
-            </MudStack>
-        </ChildRowContent>
         <PagerContent>
             <MudDataGridPager T="Driver" />
         </PagerContent>
@@ -67,6 +61,7 @@
     private List<CurrentDriver> currentDrivers;
 
     private bool showingArchived = false;
+    private string _searchString;
 
     protected override async Task OnInitializedAsync()
     {
@@ -80,9 +75,32 @@
         drivers = await _driverService.GetDrivers();
     }
 
+    private Func<Driver, bool> _driverFilter => x =>
+    {
+        if (string.IsNullOrWhiteSpace(_searchString))
+            return true;
+
+        if (x.FirstName.Contains(_searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+
+        if (x.LastName.Contains(_searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+
+        return false;
+    };
+
     // Displayable helpers
     private string ReadActiveLeague(long driverId) =>
         currentDrivers.Find(e => e.DriverId == driverId)?.League ?? "None";
+
+    private async Task ShowDetailData(Driver driver)
+    {
+        var parameters = new DialogParameters
+        {
+            ["Driver"] = driver,
+        };
+        _ = await _dialogService.ShowAsync<DriverDetailStat>("Driver details", parameters);
+    }
 
     private async Task AddDriver() => await UpdateDriver(null);
     private async Task UpdateDriver(Driver? item)
@@ -117,6 +135,7 @@
         else
             drivers = await _driverService.GetDrivers(StateFilter.Archived);
 
+        _searchString = string.Empty;
         showingArchived = !showingArchived;
     }
 
