--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -1,7 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Driver comparison</MudText>
-        <MudText Typo="Typo.body2" Color="Color.Warning">Does net yet filter based on which league</MudText>
+        <MudText Typo="Typo.h5">Driver comparison</MudText>
     </TitleContent>
     <DialogContent>
         <MudPaper Elevation="30" Width="1100px" Class="pa-2">
@@ -23,6 +22,7 @@
                         <ItemTemplate>
                             <MudCheckBox Checked="@context.IsSelected" Color="Color.Secondary" />
                             <MudText>@context.Value.FullName</MudText>
+                            <MudSpacer />
                             <CountryFlag Code="@context.Value.Country" Size="ElementSize.Small" />
                         </ItemTemplate>
                     </MudSelectExtended>
