--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -121,6 +121,30 @@
                                     <td>2/5</td>
                                 </tr>
                                 <tr>
+                                    <td>
+                                        <MudText Typo="Typo.h5">12</MudText>
+                                    </td>
+                                    <td>?/5</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <MudText Typo="Typo.h5" Style="@(ViewHelper.SetTextNumberStyle("#b9b8bb", "mediumpurple"))">5</MudText>
+                                    </td>
+                                    <td>?/5</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <MudText Typo="Typo.h5" Style="@(ViewHelper.SetTextNumberStyle("#b9b8bb", "mediumpurple"))">22</MudText>
+                                    </td>
+                                    <td>?/5</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <NumberDisplay Colour="@("red")">15</NumberDisplay>
+                                    </td>
+                                    <td>?/5</td>
+                                </tr>
+                                <tr>
                                     <td colspan="2">
                                         <MudStack Row="true" Spacing="0" Class="mud-width-full pa-0" Style="height:8px">
                                             <span class="py-1" style="width:25%; background-color:red"></span>
