--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -115,19 +115,19 @@ th {
     white-space: nowrap;
 }
 
-.field-xs {
+.field-xs, .field-xs > * {
     width: 75px;
 }
 
-.field-sm {
+.field-sm, .field-sm > * {
     width: 200px;
 }
 
-.field-md {
+.field-md, .field-md > * {
     width: 400px;
 }
 
-.field-lg {
+.field-lg, .field-lg > * {
     width: 800px;
 }
 
@@ -143,6 +143,10 @@ th {
 /* extensions on mudblazor css variables */
 .dialog-shadow {
     box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
+}
+
+.collapse table {
+    border-collapse: collapse;
 }
 
 .extra-dense .mud-table-cell {
