--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeamEditor.razor
@@ -1,58 +1,52 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Modify season team</MudText>
+        <MudText Typo="Typo.h5">Modify season team</MudText>
     </TitleContent>
     <DialogContent>
-        <MudForm Model="@Model">
-            @if (Model.Id == 0 && Teams is not null)
-            {
-                <MudSelect T="long" @bind-Value="@Model.TeamId" Label="Team">
-                    @foreach (var team in Teams)
-                    {
-                        <MudSelectItem Value="@team.Id">
-                            <CountryFlag Code="@team.Country" Size="ElementSize.Tiny" />
-                            @team.Name
-                        </MudSelectItem>
-                    }
-                </MudSelect>
-            }
+        @if (model.Id == 0)
+        {
+            <MudSelect T="long" @bind-Value="@model.TeamId" Label="Team" Class="field-md">
+                @foreach (var team in Teams)
+                {
+                    <MudSelectItem Value="@team.Id">
+                        <CountryFlag Code="@team.Country" Size="ElementSize.Tiny" />
+                        @team.Name
+                    </MudSelectItem>
+                }
+            </MudSelect>
+        }
 
-            <MudTextField @bind-Value="@Model.Name" Label="Name" Class="field-md" Required />
-            <MudTextField @bind-Value="@Model.Principal" Label="Team Principal" Class="field-md" Required />
-            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" Class="field-sm" />
-            <MudColorPicker @bind-Text="@Model.Accent" Label="Accent" Class="field-sm" />
-            <MudNumericField @bind-Value="@Model.BaseValue" Label="BaseValue" Class="field-sm" />
-            <MudNumericField @bind-Value="@Model.Aero" Label="Aero" Class="field-sm" />
-            <MudNumericField @bind-Value="@Model.Chassis" Label="Chassis" Class="field-sm" />
-            <MudNumericField @bind-Value="@Model.Powertrain" Label="Powertrain" Class="field-sm" />
-            <MudNumericField @bind-Value="@Model.Reliability" Label="Reliability" Class="field-sm" />
+        <MudTextField @bind-Value="@model.Name" Label="Name" Class="field-md" Required />
+        <MudTextField @bind-Value="@model.Principal" Label="Team Principal" Class="field-md" Required />
 
-            @if (Manufacturers is not null)
+        <MudStack Row="true" Spacing="4">
+            <MudColorPicker @bind-Text="@model.Colour" Label="Colour" Placeholder="Select colour" />
+            <MudColorPicker @bind-Text="@model.Accent" Label="Accent" Placeholder="Select accent" />
+        </MudStack>
+
+
+        <MudNumericField @bind-Value="@model.BaseValue" Label="BaseValue" Class="field-sm" />
+        <MudNumericField @bind-Value="@model.Reliability" Label="Reliability" Class="field-sm" />
+
+        <MudNumericField @bind-Value="@model.Aero" Label="Aero" Class="field-sm" />
+        <MudNumericField @bind-Value="@model.Chassis" Label="Chassis" Class="field-sm" />
+        <MudNumericField @bind-Value="@model.Powertrain" Label="Powertrain" Class="field-sm" />
+
+        <MudSelect T="long" @bind-Value="@model.ManufacturerId" Label="Tyre manufacturer" Required="true">
+            @foreach (var manufacturer in Manufacturers)
             {
-                <MudSelect T="long" @bind-Value="@Model.ManufacturerId" Label="Tyre manufacturer" Required="true">
-                    @foreach (var manufacturer in Manufacturers)
-                    {
-                        <MudSelectItem Value="manufacturer.Id">@manufacturer.Name</MudSelectItem>
-                    }
-                </MudSelect>
+                <MudSelectItem Value="manufacturer.Id">@manufacturer.Name</MudSelectItem>
             }
-            
-            @if (SeasonEngines is not null)
+        </MudSelect>
+
+        <MudSelect T="long" @bind-Value="@model.SeasonEngineId" Label="Engine" Required="true">
+            @foreach (var engine in SeasonEngines)
             {
-                <MudSelect T="long" @bind-Value="@Model.SeasonEngineId" Label="Engine" Required="true">
-                    @foreach (var engine in SeasonEngines)
-                    {
-                        <MudSelectItem Value="engine.Id">@engine.Name</MudSelectItem>
-                    }
-                </MudSelect>
+                <MudSelectItem Value="engine.Id">@engine.Name</MudSelectItem>
             }
-        </MudForm>
-        <MudPaper Height="100px" Class="d-flex flex-column">
-            <MudText Typo="Typo.h6" Class="flex-initial">Preview</MudText>
-            <div class="flex-auto d-flex justify-center align-center" style="background-color:@(Model.Colour); color:@(Model.Accent)">
-                <MudText Class="ma-auto">@Model.Name</MudText>
-            </div>
-        </MudPaper>
+        </MudSelect>
+
+        <PreviewColourMix Colour="@model.Colour" Accent="@model.Accent" Text="@model.Name" />
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
@@ -63,24 +57,24 @@
 @code {
     [CascadingParameter] protected MudDialogInstance? TeamDialog { get; set; }
     [Parameter] public long SeasonId { get; set; }
-    [Parameter] public List<Team>? Teams { get; set; }
-    [Parameter] public List<Manufacturer>? Manufacturers { get; set; }
-    [Parameter] public List<SeasonEngine>? SeasonEngines { get; set; }
+    [Parameter] public IEnumerable<Team> Teams { get; set; } = Enumerable.Empty<Team>();
+    [Parameter] public IEnumerable<Manufacturer> Manufacturers { get; set; } = Enumerable.Empty<Manufacturer>();
+    [Parameter] public IEnumerable<SeasonEngine> SeasonEngines { get; set; } = Enumerable.Empty<SeasonEngine>();
     [Parameter] public SeasonTeam? SeasonTeam { get; set; }
 
-    private EditSeasonTeamModel Model;
+    EditSeasonTeamModel model;
 
     protected override void OnInitialized()
     {
-        Model = new EditSeasonTeamModel(SeasonTeam);
-        Model.SeasonId = SeasonId;
+        model = new EditSeasonTeamModel(SeasonTeam);
+        model.SeasonId = SeasonId;
     }
 
     private void Submit()
     {
-        if (Model.IsDirty)
+        if (model.IsDirty)
         {
-            var modTeam = Model.Record;
+            var modTeam = model.Record;
             TeamDialog?.Close(DialogResult.Ok(modTeam));
         }
     }
