--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -1,51 +1,43 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h3">Add race for round: @IncomingRound</MudText>
+        <MudText Typo="Typo.h5">Modify race</MudText>
     </TitleContent>
     <DialogContent>
-        <MudForm Model="@Model">
-            <MudGrid>
-                <MudItem xs="9">
-                    <MudStack>
-                        <MudTextField @bind-Value="Model.Name" Label="Name" Class="field-lg" />
+        <MudPaper MinHeight="300px" Class="pa-4">
+            <MudTextField @bind-Value="model.Name" Label="Name" Class="field-lg" />
 
-                        <div>
-                            <MudText Typo="Typo.subtitle2">Weather</MudText>
-                            <MudChipSet @bind-SelectedChip="climateChip" Mandatory="true">
-                                @foreach (var climate in Climates)
-                                {
-                                    <MudChip Value="@climate.Id" Icon="@climate.Icon" Default="@(Model.ClimateId == climate.Id)">
-                                        @climate.Terminology
-                                    </MudChip>
-                                }
-                            </MudChipSet>
-                        </div>
-
-                        <MudSwitch @bind-Checked="variableRaceLength" Label="Set variable race length" />
-
-                        @if (variableRaceLength)
-                        {
-                            <MudNumericField T="int" @bind-Value="Model.RaceLength" Step="10" Label="RaceLength" HelperText="Should round to nearest ten" Class="field-md" />
-                        }
-                    </MudStack>
-                </MudItem>
-
-                <MudItem xs="3">
-                    @if (errorValidations.Any())
+            <div>
+                <MudText Typo="Typo.subtitle2">Weather</MudText>
+                <MudChipSet @bind-SelectedChip="climateChip" Mandatory="true">
+                    @foreach (var climate in Climates)
                     {
-                        <MudList>
-                            <MudListSubheader>Error messages</MudListSubheader>
-                            @foreach (var error in errorValidations)
-                            {
-                                <MudListItem>
-                                    <MudText Color="Color.Error">@error</MudText>
-                                </MudListItem>
-                            }
-                        </MudList>
+                        <MudChip Value="@climate.Id" Icon="@climate.Icon" Default="@(model.ClimateId == climate.Id)">
+                            @climate.Terminology
+                        </MudChip>
                     }
-                </MudItem>
-            </MudGrid>
-        </MudForm>
+                </MudChipSet>
+            </div>
+
+            <MudSwitch @bind-Checked="variableRaceLength" Label="Variable race length" />
+
+            @if (variableRaceLength)
+            {
+                <MudNumericField T="int" @bind-Value="model.RaceLength" Step="10" Label="RaceLength" HelperText="Should round to nearest ten" Class="field-md" />
+            }
+
+            @if (errorValidations.Any())
+            {
+                <MudList>
+                    <MudListSubheader>Error messages</MudListSubheader>
+                    @foreach (var error in errorValidations)
+                    {
+                        <MudListItem>
+                            <MudText Color="Color.Error">@error</MudText>
+                        </MudListItem>
+                    }
+                </MudList>
+            }
+        </MudPaper>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
@@ -62,40 +54,40 @@
     [Parameter] public int DefaultRaceLength { get; set; }
     [Parameter] public List<Climate> Climates { get; set; }
 
-    private MudChip? climateChip;
-    private bool variableRaceLength { get; set; }
-    private List<string> errorValidations = new();
+    MudChip? climateChip;
+    bool variableRaceLength;
+    List<string> errorValidations = new();
 
-    private EditRaceModel Model;
+    EditRaceModel model;
 
     protected override void OnInitialized()
     {
-        Model = new EditRaceModel(Race) { SeasonId = SeasonId };
+        model = new EditRaceModel(Race) { SeasonId = SeasonId };
 
-        if (Model.Id == 0)
+        if (model.Id == 0)
         {
-            Model.Round = IncomingRound;
-            Model.RaceLength = DefaultRaceLength;
+            model.Round = IncomingRound;
+            model.RaceLength = DefaultRaceLength;
         }
 
-        if (Model.ClimateId == 0)
-            Model.ClimateId = Climates.TakeRandomClimate().Id;
+        if (model.ClimateId == 0)
+            model.ClimateId = Climates.TakeRandomClimate().Id;
     }
 
     private void Submit()
     {
         if (climateChip != null)
-            Model.ClimateId = (long)climateChip.Value;
-        else if (Model.ClimateId == 0)
-            Model.ClimateId = Climates.TakeRandomClimate().Id;
+            model.ClimateId = (long)climateChip.Value;
+        else if (model.ClimateId == 0)
+            model.ClimateId = Climates.TakeRandomClimate().Id;
 
-        var validations = Model.RunValidations();
+        var validations = model.RunValidations();
         if (validations.Any())
             errorValidations.AddRange(validations);
 
-        if (Model.IsDirty)
+        if (model.IsDirty)
         {
-            var modRace = Model.Record;
+            var modRace = model.Record;
             RaceDialog?.Close(DialogResult.Ok(modRace));
         }
     }
